# animation-project

./: .gitmodules  Box.cpp  Box.h  CMakeLists.txt  PhysXGLM.h  PhysicsBody.h  PhysicsWorld.cpp  PhysicsWorld.h  PosePhysicsBody.h  PosePhysicsBodySkel.h  README.md  data-driven.cpp  imgui.ini  jump.cpp  main.cpp  physics.cpp  stair.cpp
resources/: 113_26.bvh  127_25_1.bvh  16_15_walk.bvh  humanoid_complex_edited.xml  test.bvh  test_walk.bvh
resources/retargetted/: 111-17(pregnant_pick_up).bvh  111-36(pregnant_carry).bvh  115-1(pick_up_waist).bvh  115-6(pick_up_knee).bvh  jumpC.bvh  output.bvh
