cmake_minimum_required(VERSION 3.15)
project(animation_project)

set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake_modules)
set(CMAKE_CXX_STANDARD 17)

add_subdirectory(gengine)

find_package(Threads REQUIRED)
find_package(PhysX REQUIRED)

add_executable(animation_project main.cpp PhysicsWorld.cpp)
target_include_directories(animation_project PUBLIC gengine ${PhysX_INCLUDE_DIR} ${PxShared_INCLUDE_DIR})
target_link_libraries(animation_project gengine)
target_link_libraries(animation_project debug ${PhysX_LIBRARIES_DEBUG})
target_link_libraries(animation_project optimized ${PhysX_LIBRARIES_RELEASE})
add_dependencies(animation_project copy_resource_folder)

add_executable(data_driven_anim data-driven.cpp PhysicsWorld.cpp Box.cpp)
target_include_directories(data_driven_anim PUBLIC gengine ${PhysX_INCLUDE_DIR} ${PxShared_INCLUDE_DIR})
target_link_libraries(data_driven_anim gengine)
target_link_libraries(data_driven_anim debug ${PhysX_LIBRARIES_DEBUG})
target_link_libraries(data_driven_anim optimized ${PhysX_LIBRARIES_RELEASE})
add_dependencies(data_driven_anim copy_resource_folder)

add_executable(stair_anim stair.cpp PhysicsWorld.cpp Box.cpp)
target_include_directories(stair_anim PUBLIC gengine ${PhysX_INCLUDE_DIR} ${PxShared_INCLUDE_DIR})
target_link_libraries(stair_anim gengine)
target_link_libraries(stair_anim debug ${PhysX_LIBRARIES_DEBUG})
target_link_libraries(stair_anim optimized ${PhysX_LIBRARIES_RELEASE})
add_dependencies(stair_anim copy_resource_folder)

add_executable(jump_anim jump.cpp PhysicsWorld.cpp Box.cpp)
target_include_directories(jump_anim PUBLIC gengine ${PhysX_INCLUDE_DIR} ${PxShared_INCLUDE_DIR})
target_link_libraries(jump_anim gengine)
target_link_libraries(jump_anim debug ${PhysX_LIBRARIES_DEBUG})
target_link_libraries(jump_anim optimized ${PhysX_LIBRARIES_RELEASE})
add_dependencies(jump_anim copy_resource_folder)

add_executable(physics_test physics.cpp PhysicsWorld.cpp)
target_include_directories(physics_test PUBLIC gengine ${PhysX_INCLUDE_DIR} ${PxShared_INCLUDE_DIR})
target_link_libraries(physics_test gengine)
target_link_libraries(physics_test debug ${PhysX_LIBRARIES_DEBUG})
target_link_libraries(physics_test optimized ${PhysX_LIBRARIES_RELEASE})
add_dependencies(physics_test copy_resource_folder)